A series of performance cleanups and patches. We also allow the thread priorities to be managed of not.
git-svn-id: svn://source.pentaho.org/svnkettleroot/mirror/Kettle/trunk@2084 5fb7f6ec-07c1-534a-b4ca-9155e429e800